force-app/main/default/objects/Queue_Config__mdt/Queue_Config__mdt.object-meta.xml
<CustomObject>
    <label>Queue Config</label>
    <pluralLabel>Queue Configs</pluralLabel>
</CustomObject>