force-app/main/default/objects/Queue_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>If unchecked, this mapping is ignored by the Case Flow. Use to disable a tier routing temporarily without deleting the record.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>