force-app/main/default/objects/Queue_Config__mdt/fields/Queue_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Queue_DeveloperName__c</fullName>
    <label>Queue Developer Name</label>
    <description>DeveloperName of the Salesforce Queue (Group where Type=Queue) to assign matching Cases to.</description>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>