force-app/main/default/objects/Queue_Config__mdt/fields/Queue_Label__c.field-meta.xml
<CustomField>
    <fullName>Queue_Label__c</fullName>
    <label>Queue Label</label>
    <description>Human-readable queue label for documentation / debugging. Does not affect routing.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>