force-app/main/default/objects/Queue_Config__mdt/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <description>Support tier key — matches Account.Support_Tier__c and Case.Account_Revenue_Tier__c values.</description>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
    <unique>true</unique>
</CustomField>